--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,42 @@
 <html>
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">    
+  <title>Chat</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
   <script src="/socket.io/socket.io.js"></script>
 </head>
-<body>    
+<body>
   <div class="container mt-4">
-    <ul id="chat" class="list-group"></ul>
-    <div class="row mt-4">
-      <input id="input" class="form-control" />
-      <button id="sendButton" type="button" class="btn btn-success mt-2">Send</button>
+    <ul id="chat" class="list-group mb-3"></ul>
+
+    <div class="row">
+      <div class="col-10">
+        <input id="input" class="form-control" placeholder="Scrivi un messaggio..." />
+      </div>
+      <div class="col-2">
+        <button id="sendButton" type="button" class="btn btn-success w-100">Send</button>
+      </div>
     </div>
   </div>
-  <script src="index.js"></script>
+
+  <!-- modale con bootstrap che è piu veloce -->
+  <div class="modal fade" id="nameModal" tabindex="-1" aria-labelledby="nameModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="nameModalLabel">Inserisci il tuo nome</h5>
+        </div>
+        <div class="modal-body">
+          <input type="text" id="nameInput" class="form-control" placeholder="Il tuo nome" />
+        </div>
+        <div class="modal-footer">
+          <button id="saveNameBtn" class="btn btn-primary">Entra in chat</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
